@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-10T01:24:02Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
+  "timestamp" : "2022-04-11T01:22:30Z",
+  "count" : 1,
+  "count_minmax" : [ 0, 1 ],
   "count_prev_day_inc" : 6,
   "count_prev_day_dec" : 0,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
   "uniques_prev_day_inc" : 4,
   "uniques_prev_day_dec" : 0
 }
