@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-10T08:20:10Z",
+  "timestamp" : "2022-04-11T01:22:30Z",
   "count_outdated" : 1159,
   "uniques_outdated" : 303,
-  "count" : 1777,
-  "uniques" : 333,
+  "count" : 1778,
+  "uniques" : 334,
   "clones" : [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 1, 7 ],
       "uniques": 5,
       "uniques_minmax": [ 1, 5 ]
+    },
+    {
+      "timestamp": "2022-04-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
