@@ -1,6 +1,6 @@
 {
-  "count": 618,
-  "uniques": 19,
+  "count": 619,
+  "uniques": 20,
   "clones": [
     {
       "timestamp": "2022-03-28T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 7,
       "uniques": 5
+    },
+    {
+      "timestamp": "2022-04-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
