@@ -1,3 +1,9 @@
+2022-04-11T01:22:30Z:
+* notice: last 14d: all unq: 619 20
+* notice: prev accum: outdated-all outdated-unq / all unq: 1159 303 / 1777 333
+* notice: next accum: outdated-all outdated-unq / all unq: 1159 303 / 1778 334
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-10T08:20:10Z:
 * notice: last 14d: all unq: 618 19
 * notice: prev accum: outdated-all outdated-unq / all unq: 1158 302 / 1777 333
